tests/negative/neg_pr118d_reverse_for_of.safe
package neg_pr118d_reverse_for_of

   type int_list is array of integer

   values : int_list = [1, 2, 3]
   total : integer = 0

   for reverse item of values
      total = total + item

   print (total)
